--- a/putcharprintf/Libft/Makefile
+++ b/putcharprintf/Libft/Makefile
@@ -7,7 +7,7 @@ FILES = ft_atoi.c ft_bzero.c ft_isalnum.c ft_isalpha.c ft_calloc.c ft_isprint.c 
 		ft_memcmp.c ft_putchar_fd.c ft_putnbr.c ft_strchr.c ft_strdup.c ft_strjoin.c ft_split.c \
 		ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strmapi.c ft_strnstr.c ft_strtrim.c \
 		ft_substr.c ft_tolower.c ft_memmove.c ft_putstr_fd.c ft_strrchr.c ft_toupper.c ft_putstr.c \
-		ft_putchar.c ft_putunbr.c ft_putnbr_base.c
+		ft_putchar.c ft_putunbr.c ft_putnbr_base.c ft_strlen_basehexa.c
 OBJ = $(FILES:.c=.o)
 
 $(NAME):	$(OBJ)
